--- a/css/aboutUs/aboutUs.css
+++ b/css/aboutUs/aboutUs.css
@@ -5,13 +5,12 @@ a,
 button {
   color: var(--black);
   font-weight: 500;
-  font-size: 16px;
+
   text-decoration: none;
   font-family: "Poppins", sans-serif;
 }
 
 /*Header style*/
-
 a{
   color: var(--white);
   text-decoration: none;
@@ -121,6 +120,7 @@ color: var(--white);
   margin: 8px;
   transition: all ease 1s;
 }
+
 /*Container of background*/
 
 .main-home {
