--- a/css/contact/styles.css
+++ b/css/contact/styles.css
@@ -47,7 +47,7 @@ nav{
 
 
 .nav-list a{
-  letter-spacing: 3px;
+  letter-spacing: 0.1rem;
   margin-left: 32px;
   color: var(--purple);
 }
@@ -120,8 +120,6 @@ color: var(--white);
   margin: 8px;
   transition: all ease 1s;
 }
-/*Container of background*/
-
 
 /*Container of background*/
 .information {
